<resources>

    <string name="app_name">EncrypText</string>
    <string name="menu_settings">Settings</string>
    <string name="title_home_screen">EncrypText</string>


    <string name="Search">Search</string>
    <string name="Write">Write</string>
    <string name="Placeholder">Placeholder</string>
    <string name="To">To</string>
    <string name="Type_Message">Type Message</string>
    <string name="Send">Send</string>
    <string name="Start_Conversation">startConversationView</string>
    <string name="title_conversation_view">Conversation</string>
    <string name="title_key_exchange_requests">Key Exchange Statuses</string>
    <string name="Send_Message">sendMessage</string>
    <string name="contactCaption">Contact image</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="newConv">New conversation</string>
    <string name="view_key_requests">View key requests</string>
    <string name="settings">Settings</string>
    <string name="messages_not_encrypted">Messages not encrypted!</string>
    <string name="messages_encrypted">Messages encrypted with AES 256</string>
    <string name="about">About</string>
    <string name="heads_up_explanation">On Lollipop and higher devices, these are notifications that show over the current app, instead of just sitting in the notification area</string>
    <string name="heads_up_setting">Heads Up Notifications</string>

</resources>