<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/Write"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:minWidth="85dip"
        android:onClick="@string/Start_Conversation"
        android:text="@string/Write" />

    <Button
        android:id="@+id/Search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:minWidth="85dip"
        android:text="@string/Search" />

    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Write"
        android:layout_centerHorizontal="true"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        tools:listitem="@android:layout/simple_list_item_2" >

    </ListView>

</RelativeLayout>
