<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/keyNotificationPicture"
            android:contentDescription="@string/contactCaption"
            android:src="@mipmap/icon"/>

        <View
            android:id="@+id/verticalSeparator"
            android:layout_width="1dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="3dp"
            android:layout_height="match_parent"
            android:background="@android:color/background_dark" />

    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TableRow android:layout_width="fill_parent"
                      android:layout_height="wrap_content">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Name is requesting to swap public keys with you. Accept and reply with your key?"
                    android:id="@+id/keyNotificationMessage"
                    android:layout_span="2"
                    android:layout_weight="1"/>
            </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:id="@+id/yesButton"
                android:layout_weight=".5"/>

            <Button
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:id="@+id/noButton"
                android:layout_weight=".5" />
        </TableRow>

    </TableLayout>

</LinearLayout>